change head title, fix spacing in skills

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@
 .PageHeadline{
   font-family: Courier;
   font-weight: bold;
-  text-shadow: 1px 1px 3px #ff0000;
+  text-shadow: 2px 2px 6px #ff00ff;
   color:#f2fffa;
   padding-left: 0px;
 }
@@ -199,7 +199,7 @@ ul{
 
 #projectsContent{
   width: 90%;
-  margin: 75px 550px 0px 100px;
+  margin: auto;
   /*margin: 75px 350px 0px 20px;*/
   padding-bottom: 33px;
   letter-spacing: 2px;
@@ -217,6 +217,7 @@ ul{
 #columnsOfSkills{
   padding-top: 50px;
   margin-left: 200px;
+
 }
 
 #bodyProjects{
@@ -287,7 +288,7 @@ ul{
   /*
   box-shadow: 0 0 0.8em #4c657f, 0 0 0.8em #4c657f, 0 0 0.8em #4c657f;
   */
-  box-shadow: 0 0 0.4em #00ff00, 0 0 0.4em #00ff00, 0 0 0.4em #00ff00;
+  box-shadow: 0 0 0.6em #00ff00, 0 0 0.6em #00ff00, 0 0 0.6em #00ff00;
   /*3px 3px 9px #00ff00;
   */
   /*
